2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: Fix security
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl: Fix for non-root

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Check for SINGLE_USERID
	* common-src/Makefile.am: Install example amanda-security.conf in
	  CONFIG_DIR

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* Add a /etc/amanda-security.conf file

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c: Filter option from COMMAND-OPTIONS
	* common-src/ammessage.c: Add message.

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (check_exec_for_suid_message,
	  check_exec_for_suid): New functions to verify a binary is secure
	* client-src/client_util.h(check_exec_for_suid_message,
	  check_exec_for_suid): Add prototypes
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c, client-src/runtar.c: Call
	  check_exec_for_suid* before running a binary as root
	* common-src/ammessage.c: Add messages
	* installcheck/ambsdtar.pl: Fix check
	* installcheck/amgtar.pl: Fix check

2016-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/runtar.c: Filter tar arguments
	* installcheck/runtar.pl: Check runtar errorr
	* installcheck/Makefile.am: Add runtar.pl

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c (set_host): Correctly setdump_hostname
	  when the input is quoted with double quote

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Fix for new URL path

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Typo
	* ReleaseNotes: Typo

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.8
	* ReleaseNotes: Change in 3.3.8

2015-12-10  Xu Han <xhan@carbonite.com>