@@ -16,12 +16,9 @@
  */
 /*
  */
-#include <stdio.h>
-#include <unistd.h>
-#include <stdlib.h>
-#include "../config/config.h"
+#include <amanda.h>
 
-int main()
+int main(void)
 {
     FILE *sec_file = fopen("amanda-security.conf", "w");
     if (!sec_file) {
@@ -63,18 +60,18 @@ int main()
     fprintf(sec_file,"#runtar:gnutar_path:%s\n", GNUTAR);
     fprintf(sec_file,"#amgtar:gnutar_path:%s\n", GNUTAR);
 #else
-    fprintf(sec_file,"#runtar:gnutar_path:/no/default/gnutar/path\n";
-    fprintf(sec_file,"#amgtar:gnutar_path:/no/default/gnutar/path\n";
+    fprintf(sec_file,"#runtar:gnutar_path:/no/default/gnutar/path\n");
+    fprintf(sec_file,"#amgtar:gnutar_path:/no/default/gnutar/path\n");
 #endif
 #ifdef STAR
     fprintf(sec_file,"#amstar:star_path:%s\n", STAR);
 #else
-    fprintf(sec_file,"#amstar:star_path:/no/default/star/path\n";
+    fprintf(sec_file,"#amstar:star_path:/no/default/star/path\n");
 #endif
 #ifdef BSDTAR
     fprintf(sec_file,"#ambsdtar:bsdtar_path:%s\n", BSDTAR);
 #else
-    fprintf(sec_file,"#ambsdtar:bsdtar_path:/no/default/bsdtar/path\n";
+    fprintf(sec_file,"#ambsdtar:bsdtar_path:/no/default/bsdtar/path\n");
 #endif
 
     fprintf(sec_file,"\n");
